--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amirmahdimajedi/vue-elm-components.git"
+    "url": "https://github.com/amirmahdimajedi/vue-elm-components.git"
   },
   "publishConfig": {
     "registry":"https://npm.pkg.github.com"
