--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "vue-elm-components",
   "version": "0.0.1",
   "description": "Simply embed elm apps as components into your vue applications",
-  "main": "dist/build.js",
+  "main": "dist/lib.js",
   "scripts": {
     "dev": "echo \"no dev script!\" && exit 1",
     "test": "echo \"no tests!\" && exit 0",
-    "build": "npm run build:es && npm run build:umd",
+    "build": "cross-env rollup -c",
     "build:umd": "cross-env rollup -c -f umd",
     "build:es": "cross-env rollup -c -f es"
   },
@@ -15,7 +15,7 @@
     "url": "https://github.com/amirmahdimajedi/vue-elm-components.git"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "vue",
@@ -34,14 +34,14 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@vue/compiler-sfc": "^3.0.11",
-    "buble": "^0.20.0",
     "cross-env": "^7.0.3",
     "rollup": "^2.50.4",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-elm": "^3.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-uglify": "^5.0.2",
     "rollup-plugin-vue": "^6.0.0"
   }
 }
