removed old npm scripts

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "echo \"no dev script!\" && exit 1",
     "test": "echo \"no tests yet!\" && exit 0",
-    "build": "cross-env rollup -c",
-    "build:umd": "cross-env rollup -c -f umd",
-    "build:es": "cross-env rollup -c -f es"
+    "build": "cross-env rollup -c"
   },
   "repository": {
     "type": "git",
